# ogre-next

./: .gitignore  CMakeLists.txt  Makefile
CMake/Utils/: OgreAddTargets.cmake
ExportAPI/: CMakeLists.txt  README.md
ExportAPI/src/: MiniOgre.cpp
OgreMain/src/: OgreHlmsManager.cpp
